[project]
name = "doppler-pdm"
version = "0.1.0"
description = ""
authors = [{ name="Elijah Sink", email="theminorprofit@gmail.com" }]
dependencies = ["pdm~=1.6"]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = { text="MIT" }

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black~=21.6b0", "isort~=5.9", "pre-commit~=2.13"]
