[project]
name = "doppler-pdm"
version = "1.0.2"
description = "A PDM plugin which allows commands to be run with environment variables from Doppler"
authors = [{ name="Elijah Sink", email="theminorprofit@gmail.com" }]
dependencies = ["pdm~=1.6"]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = { text="MIT" }

[project.urls]
homepage = "https://github.com/ElijahSink/doppler-pdm"


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project.entry-points.pdm]
run = "doppler_pdm.__init__:main"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["black~=21.6b0", "isort~=5.9", "pre-commit~=2.13"]


[tool.isort]
length_sort = "1"
profile = "black"
